bump versions, make FPAPI an optional dependency